src/component/SearchOverlay/SearchOverlay.style.scss
/* ... */
.SearchSuggestion {
    position: absolute;
    width: 100%;
    &-TrandingTag {
        font-family: 'Avenir Next';
        font-size : 13px;
        letter-spacing: 0px;
        text-align: center;
        line-height: 40;
        color: #4A4A4A;
        background-color: #F0F0F0;
        opacity: 1;
        text-transform: capitalize;
        width : 515px;
        white-space: nowrap;
        overflow: hidden;
        display: inline-block;
        text-overflow: ellipsis;
    }

    &-Item {
        @include desktop {
            margin : 0px;
        }
        ul {
            margin-bottom: 50px;

            li {
                display: flex;
                flex-direction: row;
                padding: 0px;
                justify-content: space-between;
                font-family: 'Avenir Next';
                font-size: 14px;
                line-height: 16px;
                color:#000000;

                &::before {
                    display: none;
                }


                a {
                    &:hover {
                        text-decoration: none;
                    }
                }
            }
        }
    }

    &-Recommended {

        @include desktop {
            width: 283px;
            margin-left : 0px;
            font-size: 14px;
            margin-top: 0px;
        }
        
        h2 {
            font: normal normal 600 14px/19px 'Avenir Next', sans-serif;
            color: #000000;
            text-transform: uppercase;
            margin-top: 0px;
            letter-spacing: 1.56px;
        }
        &_isArabic {
            margin-left: 0px;
        }

        &::before {
            display: none;
        }

        .productContentLayoutLink {
            list-style-type: none !important;
            &_isArabic {
                ul {
                    li {
                        margin-right: 0px !important;
                    }
                }
            }
        }

        ul {
            &::before {
                display: none;
            }

            display: flex;
            flex-direction: column;
            justify-content: space-between;

            @include mobile {
                display: flex;
                flex-direction: row;
                width: 1011px;
                overflow: scroll;
            }

            &::-webkit-scrollbar {
                width: 1px;
            }

            li {
                &::before {
                    display: none;
                }

                margin-bottom: -20px;

                @include desktop {
                    &:first-child {
                        margin-top: 0px !important;
                    }
                }

                padding-left: 0px;
                width: 260.39px;
                height: auto;
                margin-right: 7.92px;

                a {
                    text-decoration: none;

                    &:hover {
                        text-decoration: none;
                    }
                }
            }
        }

        &_isArabic {
            ul {
                li {
                    margin-right: 0px;
                }
            }
        }

        @include before-desktop {
            margin-bottom: 15px;
        }
    }

    ul {
        ::before {
            content: unset;
        }

        li {
            padding: 0;
            font-size: 15px;
            margin-bottom: 0;

            @include before-desktop() {
                font-size: 12px;
            }
        }

        a {
            color: var(--link-dark-gray);
            width: 100%;
            display: block;
            text-decoration: none;


            .suggestion-details-box {
                display: flex;
                justify-content: space-between;

                span {
                    position: relative;
                }

                div {
                    display: flex;
                    flex-direction: row;
                    justify-content: space-between;
                }
            }
        }
    }

    h2 {
        font-family: "Avenir Next";
        text-transform: uppercase;
        font-weight: "Demi Bold";
        margin: 0;
        color: #000000;
        font-size: 14px;
    }
}

.TrandingBrands {
    ul {
        &::before {
            display: none;
        }

        display: grid;
        grid-template-columns: 96px 96px 96px;
        grid-template-rows: 124px 124px 124px;
        grid-gap: 3px 6px;
        padding-top: 20px
    }

    h2 {
        font: normal normal 600 14px/19px 'Avenir Next',sans-serif;
        color: #000000;
        text-transform: uppercase;
        margin-bottom: 0px;
        margin-top: 0px;
        letter-spacing: 1.56px;
    }
    
    li {
        padding-left: 0px !important;

        &::before {
            display: none;
        }
    }

    img {
        @include desktop {
            width: 96px !important;
            height: 96px !important;
            border-radius: 4px;
            opacity: 1;
        }
    }

    .SearchSuggestion {
        &-TrandingImage {
            width: 96px;
            height: 96px;
            border: none;
            border-radius: 5px;
            margin: 0px;
            position: relative;
            &::before {
                background-image: url(/static/media/fallback.bf804003.png);
            }

            div {
                position: absolute !important;
                text-align: center;
                font-size: 10px;
                left: 0%;
                right: 0%;
                line-height: 11px;
                font-family: 'Avenir Next';
                font-weight: 600;
                text-transform: uppercase;
            }
        }
        .trendingLabels {
            text-align: center;
            &_isArabic {
                right: 27%;
            }
        }
    }
}

